// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`background shapes shape group: A 1`] = `
<bolt-background-shapes bolt-component>
  <div class="c-bolt-background-shapes">
    <div class="c-bolt-background-shapes__shapes">
      <div class="o-bolt-grid o-bolt-grid--center o-bolt-grid--full">
        <div class="o-bolt-grid__cell u-bolt-width-1/3">
          <div class="c-bolt-background-shapes__shape c-bolt-background-shapes__shape--yellow">
            <?xml version="1.0"
                  encoding="UTF-8"
                  standalone="no"
            ?>
            <svg class="c-bolt-background-shapes__svg"
                 width="100%"
                 viewbox="0 0 400 400"
                 version="1.1"
                 xmlns="http://www.w3.org/2000/svg"
                 xmlns:xlink="http://www.w3.org/1999/xlink"
            >
              <title>
                circle-square
              </title>
              <defs>
              </defs>
              <g stroke="none"
                 stroke-width="1"
                 fill="none"
                 fill-rule="evenodd"
              >
                <g id="circle-square">
                  <rect class="c-bolt-background-shapes__svg-primary"
                        fill="#FFCC4C"
                        transform="translate(200.000000, 200.000000) scale(-1, 1) rotate(-270.000000) translate(-200.000000, -200.000000) "
                        x="0"
                        y="1.8189894e-12"
                        width="400"
                        height="400"
                        rx="200"
                  >
                  </rect>
                  <rect class="c-bolt-background-shapes__svg-interior"
                        fill="#161B3D"
                        transform="translate(201.000000, 200.000000) scale(-1, 1) rotate(-270.000000) translate(-201.000000, -200.000000) "
                        x="106"
                        y="105"
                        width="190"
                        height="190"
                  >
                  </rect>
                </g>
              </g>
            </svg>
          </div>
        </div>
        <div class="o-bolt-grid__cell u-bolt-width-1/3">
          <div class="c-bolt-background-shapes__shape c-bolt-background-shapes__shape--orange">
            <?xml version="1.0"
                  encoding="UTF-8"
                  standalone="no"
            ?>
            <svg class="c-bolt-background-shapes__svg"
                 width="100%"
                 viewbox="-75 -75 400 400"
                 version="1.1"
                 xmlns="http://www.w3.org/2000/svg"
                 xmlns:xlink="http://www.w3.org/1999/xlink"
            >
              <title>
                Outline Circle
              </title>
              <defs>
              </defs>
              <g stroke="none"
                 stroke-width="1"
                 fill="none"
                 fill-rule="evenodd"
              >
                <rect class="c-bolt-background-shapes__svg-outline c-bolt-background-shapes__svg-interior"
                      stroke="#009999"
                      stroke-width="60"
                      transform="translate(125.000000, 125.000000) scale(-1, 1) rotate(-270.000000) translate(-125.000000, -125.000000) "
                      x="30"
                      y="30"
                      width="190"
                      height="190"
                      rx="95"
                >
                </rect>
              </g>
            </svg>
          </div>
        </div>
        <div class="o-bolt-grid__cell u-bolt-width-1/3">
          <div class="c-bolt-background-shapes__shape c-bolt-background-shapes__shape--teal">
            <?xml version="1.0"
                  encoding="UTF-8"
                  standalone="no"
            ?>
            <svg class="c-bolt-background-shapes__svg"
                 width="100%"
                 viewbox="0 0 400 400"
                 version="1.1"
                 xmlns="http://www.w3.org/2000/svg"
                 xmlns:xlink="http://www.w3.org/1999/xlink"
            >
              <title>
                square-square
              </title>
              <defs>
              </defs>
              <g stroke="none"
                 stroke-width="1"
                 fill="none"
                 fill-rule="evenodd"
              >
                <g id="square-square">
                  <rect class="c-bolt-background-shapes__svg-primary"
                        fill="#009999"
                        transform="translate(200.000000, 200.000000) scale(-1, 1) rotate(-270.000000) translate(-200.000000, -200.000000) "
                        x="0"
                        y="0"
                        width="400"
                        height="400"
                  >
                  </rect>
                  <rect class="c-bolt-background-shapes__svg-interior"
                        fill="#1F2555"
                        transform="translate(201.000000, 200.000000) scale(-1, 1) rotate(-270.000000) translate(-201.000000, -200.000000) "
                        x="106"
                        y="105"
                        width="190"
                        height="190"
                  >
                  </rect>
                </g>
              </g>
            </svg>
          </div>
        </div>
        <div class="o-bolt-grid__cell u-bolt-width-1/3">
          <div class="c-bolt-background-shapes__shape c-bolt-background-shapes__shape--teal">
            <?xml version="1.0"
                  encoding="UTF-8"
                  standalone="no"
            ?>
            <svg class="c-bolt-background-shapes__svg"
                 width="100%"
                 viewbox="0 0 400 400"
                 version="1.1"
                 xmlns="http://www.w3.org/2000/svg"
                 xmlns:xlink="http://www.w3.org/1999/xlink"
            >
              <title>
                Little Circle
              </title>
              <defs>
              </defs>
              <g stroke="none"
                 stroke-width="1"
                 fill="none"
                 fill-rule="evenodd"
              >
                <rect class="c-bolt-background-shapes__svg-primary"
                      fill="#161B3D"
                      transform="translate(95.000000, 95.000000) scale(-1, 1) rotate(-270.000000) translate(-95.000000, -95.000000) "
                      x="105"
                      y="105"
                      width="190"
                      height="190"
                      rx="95"
                >
                </rect>
              </g>
            </svg>
          </div>
        </div>
        <div class="o-bolt-grid__cell u-bolt-width-1/3">
          <div class="c-bolt-background-shapes__shape c-bolt-background-shapes__shape--yellow">
            <?xml version="1.0"
                  encoding="UTF-8"
                  standalone="no"
            ?>
            <svg class="c-bolt-background-shapes__svg"
                 width="100%"
                 viewbox="0 0 400 400"
                 version="1.1"
                 xmlns="http://www.w3.org/2000/svg"
                 xmlns:xlink="http://www.w3.org/1999/xlink"
            >
              <title>
                square-square
              </title>
              <defs>
              </defs>
              <g stroke="none"
                 stroke-width="1"
                 fill="none"
                 fill-rule="evenodd"
              >
                <g id="square-square">
                  <rect class="c-bolt-background-shapes__svg-primary"
                        fill="#009999"
                        transform="translate(200.000000, 200.000000) scale(-1, 1) rotate(-270.000000) translate(-200.000000, -200.000000) "
                        x="0"
                        y="0"
                        width="400"
                        height="400"
                  >
                  </rect>
                  <rect class="c-bolt-background-shapes__svg-interior"
                        fill="#1F2555"
                        transform="translate(201.000000, 200.000000) scale(-1, 1) rotate(-270.000000) translate(-201.000000, -200.000000) "
                        x="106"
                        y="105"
                        width="190"
                        height="190"
                  >
                  </rect>
                </g>
              </g>
            </svg>
          </div>
        </div>
        <div class="o-bolt-grid__cell u-bolt-width-1/3">
          <div class="c-bolt-background-shapes__shape c-bolt-background-shapes__shape--orange">
            <?xml version="1.0"
                  encoding="UTF-8"
                  standalone="no"
            ?>
            <svg class="c-bolt-background-shapes__svg"
                 width="100%"
                 viewbox="0 0 400 400"
                 version="1.1"
                 xmlns="http://www.w3.org/2000/svg"
                 xmlns:xlink="http://www.w3.org/1999/xlink"
            >
              <title>
                Little Circle
              </title>
              <defs>
              </defs>
              <g stroke="none"
                 stroke-width="1"
                 fill="none"
                 fill-rule="evenodd"
              >
                <rect class="c-bolt-background-shapes__svg-primary"
                      fill="#161B3D"
                      transform="translate(95.000000, 95.000000) scale(-1, 1) rotate(-270.000000) translate(-95.000000, -95.000000) "
                      x="105"
                      y="105"
                      width="190"
                      height="190"
                      rx="95"
                >
                </rect>
              </g>
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</bolt-background-shapes>
`;

exports[`background shapes shape group: B 1`] = `
<bolt-background-shapes bolt-component>
  <div class="c-bolt-background-shapes">
    <div class="c-bolt-background-shapes__shapes">
      <div class="o-bolt-grid o-bolt-grid--center o-bolt-grid--full">
        <div class="o-bolt-grid__cell u-bolt-width-1/3">
          <div class="c-bolt-background-shapes__shape c-bolt-background-shapes__shape--teal">
            <?xml version="1.0"
                  encoding="UTF-8"
                  standalone="no"
            ?>
            <svg class="c-bolt-background-shapes__svg"
                 width="100%"
                 viewbox="0 0 400 400"
                 version="1.1"
                 xmlns="http://www.w3.org/2000/svg"
                 xmlns:xlink="http://www.w3.org/1999/xlink"
            >
              <title>
                square-square
              </title>
              <defs>
              </defs>
              <g stroke="none"
                 stroke-width="1"
                 fill="none"
                 fill-rule="evenodd"
              >
                <g id="square-square">
                  <rect class="c-bolt-background-shapes__svg-primary"
                        fill="#009999"
                        transform="translate(200.000000, 200.000000) scale(-1, 1) rotate(-270.000000) translate(-200.000000, -200.000000) "
                        x="0"
                        y="0"
                        width="400"
                        height="400"
                  >
                  </rect>
                  <rect class="c-bolt-background-shapes__svg-interior"
                        fill="#1F2555"
                        transform="translate(201.000000, 200.000000) scale(-1, 1) rotate(-270.000000) translate(-201.000000, -200.000000) "
                        x="106"
                        y="105"
                        width="190"
                        height="190"
                  >
                  </rect>
                </g>
              </g>
            </svg>
          </div>
        </div>
        <div class="o-bolt-grid__cell u-bolt-width-1/3">
          <div class="c-bolt-background-shapes__shape c-bolt-background-shapes__shape--yellow">
            <?xml version="1.0"
                  encoding="UTF-8"
                  standalone="no"
            ?>
            <svg class="c-bolt-background-shapes__svg"
                 width="100%"
                 viewbox="-75 -75 400 400"
                 version="1.1"
                 xmlns="http://www.w3.org/2000/svg"
                 xmlns:xlink="http://www.w3.org/1999/xlink"
            >
              <title>
                Outline Circle
              </title>
              <defs>
              </defs>
              <g stroke="none"
                 stroke-width="1"
                 fill="none"
                 fill-rule="evenodd"
              >
                <rect class="c-bolt-background-shapes__svg-outline c-bolt-background-shapes__svg-interior"
                      stroke="#009999"
                      stroke-width="60"
                      transform="translate(125.000000, 125.000000) scale(-1, 1) rotate(-270.000000) translate(-125.000000, -125.000000) "
                      x="30"
                      y="30"
                      width="190"
                      height="190"
                      rx="95"
                >
                </rect>
              </g>
            </svg>
          </div>
        </div>
        <div class="o-bolt-grid__cell u-bolt-width-1/3">
          <div class="c-bolt-background-shapes__shape c-bolt-background-shapes__shape--orange">
            <?xml version="1.0"
                  encoding="UTF-8"
                  standalone="no"
            ?>
            <svg class="c-bolt-background-shapes__svg"
                 width="100%"
                 viewbox="0 0 400 400"
                 version="1.1"
                 xmlns="http://www.w3.org/2000/svg"
                 xmlns:xlink="http://www.w3.org/1999/xlink"
            >
              <title>
                square-square
              </title>
              <defs>
              </defs>
              <g stroke="none"
                 stroke-width="1"
                 fill="none"
                 fill-rule="evenodd"
              >
                <g id="square-square">
                  <rect class="c-bolt-background-shapes__svg-primary"
                        fill="#009999"
                        transform="translate(200.000000, 200.000000) scale(-1, 1) rotate(-270.000000) translate(-200.000000, -200.000000) "
                        x="0"
                        y="0"
                        width="400"
                        height="400"
                  >
                  </rect>
                  <rect class="c-bolt-background-shapes__svg-interior"
                        fill="#1F2555"
                        transform="translate(201.000000, 200.000000) scale(-1, 1) rotate(-270.000000) translate(-201.000000, -200.000000) "
                        x="106"
                        y="105"
                        width="190"
                        height="190"
                  >
                  </rect>
                </g>
              </g>
            </svg>
          </div>
        </div>
        <div class="o-bolt-grid__cell u-bolt-width-1/3">
          <div class="c-bolt-background-shapes__shape c-bolt-background-shapes__shape--teal">
            <?xml version="1.0"
                  encoding="UTF-8"
                  standalone="no"
            ?>
            <svg class="c-bolt-background-shapes__svg"
                 width="100%"
                 viewbox="0 0 400 400"
                 version="1.1"
                 xmlns="http://www.w3.org/2000/svg"
                 xmlns:xlink="http://www.w3.org/1999/xlink"
            >
              <title>
                Little Circle
              </title>
              <defs>
              </defs>
              <g stroke="none"
                 stroke-width="1"
                 fill="none"
                 fill-rule="evenodd"
              >
                <rect class="c-bolt-background-shapes__svg-primary"
                      fill="#161B3D"
                      transform="translate(95.000000, 95.000000) scale(-1, 1) rotate(-270.000000) translate(-95.000000, -95.000000) "
                      x="105"
                      y="105"
                      width="190"
                      height="190"
                      rx="95"
                >
                </rect>
              </g>
            </svg>
          </div>
        </div>
        <div class="o-bolt-grid__cell u-bolt-width-1/3">
          <div class="c-bolt-background-shapes__shape c-bolt-background-shapes__shape--teal c-bolt-background-shapes__shape--interior-orange">
            <?xml version="1.0"
                  encoding="UTF-8"
                  standalone="no"
            ?>
            <svg class="c-bolt-background-shapes__svg"
                 width="100%"
                 viewbox="0 0 400 400"
                 version="1.1"
                 xmlns="http://www.w3.org/2000/svg"
                 xmlns:xlink="http://www.w3.org/1999/xlink"
            >
              <title>
                circle-circle
              </title>
              <defs>
              </defs>
              <g id="Page-1"
                 stroke="none"
                 stroke-width="1"
                 fill="none"
                 fill-rule="evenodd"
              >
                <g id="circle-circle">
                  <rect class="c-bolt-background-shapes__svg-primary"
                        fill="#FFCC4C"
                        transform="translate(200.000000, 200.000000) scale(-1, 1) rotate(-270.000000) translate(-200.000000, -200.000000) "
                        x="0"
                        y="0"
                        width="400"
                        height="400"
                        rx="200"
                  >
                  </rect>
                  <rect class="c-bolt-background-shapes__svg-interior"
                        fill="#E64B17"
                        transform="translate(200.000000, 200.000000) scale(-1, 1) rotate(-270.000000) translate(-200.000000, -200.000000) "
                        x="105"
                        y="105"
                        width="190"
                        height="190"
                        rx="95"
                  >
                  </rect>
                </g>
              </g>
            </svg>
          </div>
        </div>
        <div class="o-bolt-grid__cell u-bolt-width-1/3">
          <div class="c-bolt-background-shapes__shape c-bolt-background-shapes__shape--yellow">
            <?xml version="1.0"
                  encoding="UTF-8"
                  standalone="no"
            ?>
            <svg class="c-bolt-background-shapes__svg"
                 width="100%"
                 viewbox="-75 -75 400 400"
                 version="1.1"
                 xmlns="http://www.w3.org/2000/svg"
                 xmlns:xlink="http://www.w3.org/1999/xlink"
            >
              <title>
                Outline Circle
              </title>
              <defs>
              </defs>
              <g stroke="none"
                 stroke-width="1"
                 fill="none"
                 fill-rule="evenodd"
              >
                <rect class="c-bolt-background-shapes__svg-outline c-bolt-background-shapes__svg-interior"
                      stroke="#009999"
                      stroke-width="60"
                      transform="translate(125.000000, 125.000000) scale(-1, 1) rotate(-270.000000) translate(-125.000000, -125.000000) "
                      x="30"
                      y="30"
                      width="190"
                      height="190"
                      rx="95"
                >
                </rect>
              </g>
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</bolt-background-shapes>
`;
